--- a/src/assets/styles/components/CarouselItemTop copy.scss
+++ b/src/assets/styles/components/CarouselItemTop copy.scss
@@ -6,15 +6,37 @@
     background-color: rgb(172, 101, 151);
     overflow: hidden;
     margin-right: 25px;
-    //display: flex;
+    display: inline-block;
     cursor: pointer;    /*al pasar se pone una manita*/
     transition: 450ms;  /*un tiempo para las transiciones*/
     transform-origin: center;
+    -webkit-transform-origin: center left;
+            transform-origin: center left;
 }
-  
+
 .carousel--item:hover{
   width: 350px;
   height: 185px;
   border: 5px solid grey;
     /* background-clip: padding-box; */
+}
+
+
+.carousel-item__details--img {
+  width: 20px;
+}
+
+.carousel-item:hover .carousel-item__details {
+  opacity: 1;
+}
+
+.carousel-item__details--title {
+  color: white;
+  margin: 5px 0px 0px 0px;
+}
+
+.carousel-item__details--subtitle {
+  color: white;
+  font-size: 8px;
+  margin: 3px 0px;
 }
