--- a/src/assets/styles/components/SliderCategories.scss
+++ b/src/assets/styles/components/SliderCategories.scss
@@ -1,4 +1,4 @@
-.categoriesTop {
+.sliderCategories {
 
     background: linear-gradient(#04050e, #131520, #131520);
     display: flex;
@@ -6,7 +6,7 @@
     flex-direction: column;
     padding: 0px, 30px;
     /*porcentaje que queremos que vea el usuario menos el header*/
-    min-height: calc(100vh - 342px);
+    min-height: calc(100vh - 901px);
     width: 100%;
 }
 
@@ -23,6 +23,7 @@
     letter-spacing: 2.5px;
     display: flex;
     justify-content: center;
-    margin: 4px 0px;
+    margin-top: 4px;
+    margin-bottom: 50px;
     padding-top: 60px;
 }
