--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -11,6 +11,12 @@ header {
     justify-content: center;
   }
   
+  .headerText{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    letter-spacing: 2.5px;
+    color: white;
+  }
   .imageDisney {
     background-color: transparent;
     width: 120px;
