--- a/src/assets/styles/components/Categories.scss
+++ b/src/assets/styles/components/Categories.scss
@@ -12,3 +12,11 @@
 }
 
 
+.categories__title {
+    color: white;
+    font-size: 16px;
+    margin-top: -16px;
+    position: absolute;
+    padding-left: 30px;
+    width: 100%;
+  }
