--- a/src/assets/styles/components/Categories.scss
+++ b/src/assets/styles/components/Categories.scss
@@ -5,18 +5,21 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    padding: 0px, 30px;
     /*porcentaje que queremos que vea el usuario menos el header*/
-    min-height: calc(100vh - 901px);
+    /* min-height: calc(100vh - 901px); */
     width: 100%;
 }
 
 
 .categories__title {
     color: white;
-    font-size: 16px;
+    text-align:left;
+    font-size: 23px;
     margin-top: -16px;
-    position: absolute;
-    padding-left: 30px;
+    position:relative;
     width: 100%;
+    display:flex;
+    
+    
   }
+
