--- a/src/assets/styles/components/SliderCategories.scss
+++ b/src/assets/styles/components/SliderCategories.scss
@@ -2,8 +2,8 @@
 
     background: linear-gradient(#04050e, #131520, #131520);
     display: flex;
-    justify-content: flex-start;
     flex-direction: column;
+    justify-content: center;
     padding: 0px, 30px;
     /*porcentaje que queremos que vea el usuario menos el header*/
     min-height: calc(100vh - 901px);
@@ -11,6 +11,7 @@
 }
 
 .text {
+    display:flex;
     color: #00b4d8;
     text-shadow: 0 0 15px #d35400;
     width: 100%;
