--- a/src/assets/styles/components/Header.scss
+++ b/src/assets/styles/components/Header.scss
@@ -11,6 +11,12 @@ header {
     justify-content: space-evenly;
     min-width:fit-content;
   }
+
+  .linkGroup{
+    display: flex;
+    align-items: center;
+    
+  }
   
   .headerText{
     font-weight: bold;
@@ -55,6 +61,10 @@ header {
       /* background-color: white; */
   }
 
+  ::marker{
+    color:#04050e;
+  }
+
   header > div {
     color: white;
     /* cursor: pointer; */
@@ -65,6 +75,6 @@ header {
 
   header > div:hover{
     //color: #ffa502;
-    box-shadow: 0 0 15px #d35400;
+    //box-shadow: 0 0 15px #d35400;
     
   }
